# lab-microvm

./: .gitignore  Cargo.toml  README.md  dev-vm.json
config/: dev-vm.json
script/: alpine.sh  build_image.sh  disk_size.sh  dpkg.sh  modules.sh  net.start   setup-alpine.sh
script/guest_configs/: microvm-kernel-ci-x86_64-6.1.config
script/rootfs/: net-start.sh
src/: add_subscriber.rs  main.rs
